GWT fixes